--- a/assets/assets/css/pokedex.css
+++ b/assets/assets/css/pokedex.css
@@ -135,16 +135,15 @@
 .fairy {
     background-color: #f9aec7;
 }
-.pagination {
+
+.buttons {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     width: 100%;
-    padding: 1rem;
 }
 
-.pagination button {
+.pagination button , .pagination2 button {
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
@@ -152,6 +151,7 @@
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    margin: 0 10px;
 
 }
 
