--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -39,10 +39,12 @@
     padding: .5rem;
     margin: 0.825rem;
     border-radius: 1rem;
-    box-shadow: 0 0 5px white;
-    border: groove;
-    
-    
+    box-shadow: 0 0 5px #fff;
+    border: groove;  
+}
+
+.pokemon:hover {
+    transform: scale(1.1);
 }
 
 .pokemon .number {
@@ -136,12 +138,31 @@
     background-color: #f9aec7;
 }
 
+.generations {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.genButtons {
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    margin: 0 10px 10px;
+}
+
+
 .buttons {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
 }
+
 
 .pagination button , .pagination2 button {
     padding: .25rem .5rem;
@@ -154,6 +175,7 @@
     margin: 0 10px;
 
 }
+
 
 .pokemon .detail .types .type {
     color: rgb(255, 255, 255);
@@ -184,7 +206,7 @@
 }
 
 .abilities {
-    list-style:initial;
+    list-style:none;
     padding: 0.25rem 0.5rem;
     margin: 0.25rem 0;
     color: oldlace;
@@ -192,7 +214,3 @@
     font-size: 0.8rem;
     text-align: initial;
 }
-
-
-
-
